# ECom_Microservice_Django

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pnpm-lock.yaml  pyproject.toml  tmp_appinfo.py
services/cart_service/: .env.example  Dockerfile  health.py  manage.py  pyproject.toml
services/cart_service/cart/: __init__.py  service_models.py
services/cart_service/cart/application/: __init__.py
services/cart_service/cart/application/use_cases/: add_item.py  apply_coupon.py  clear_cart.py  get_cart.py  (+3 more)
services/cart_service/cart/domain/: __init__.py  entities.py  repositories.py
services/cart_service/cart/infrastructure/: __init__.py  coupon_client.py  product_client.py  repositories.py
services/cart_service/cart/presentation/: __init__.py  serializers.py  urls.py  views.py
services/cart_service/cart_service/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
services/cart_service/migrations/: 0001_initial.py
services/cart_service/tests/integration/: test_cart_api.py
services/cart_service/tests/unit/: test_entities.py  test_use_cases.py
services/email_service/: .env.example  Dockerfile  health.py  manage.py  pyproject.toml
services/email_service/email_service/: asgi.py  celery.py  models.py  settings.py  urls.py  wsgi.py
services/email_service/emails/application/: __init__.py
services/email_service/emails/domain/: entities.py  repositories.py
services/email_service/emails/infrastructure/: __init__.py  event_consumers.py  repositories.py  smtp_provider.py
services/email_service/emails/presentation/: __init__.py  serializers.py  urls.py  views.py
services/email_service/migrations/: 0001_initial.py
services/email_service/tests/: __init__.py
services/email_service/tests/integration/: test_auth_events.py  test_email_service.py
services/email_service/tests/unit/: test_retry_policy.py  test_use_cases.py
services/gateway/: .env.example  Dockerfile  health.py  manage.py  pyproject.toml  routing.py
services/gateway/application/: jwt_utils.py
services/gateway/domain/: entities.py
services/gateway/gateway/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
services/gateway/gateway/application/: __init__.py  health_summary.py  proxy_request.py
services/gateway/gateway/domain/: __init__.py  rate_limits.py  routes.py
services/gateway/gateway/infrastructure/: __init__.py  http_client.py  jwt_validator.py  rate_limiter.py
services/gateway/gateway/presentation/: __init__.py  urls.py  views.py
services/gateway/middleware/: auth.py  error_handler.py  rate_limit.py
services/gateway/tests/: __init__.py
services/gateway/tests/integration/: test_proxy.py
services/gateway/tests/unit/: test_jwt_validator.py  test_rate_limiter.py  test_routes.py
(+310 files in other folders)
