[tool.poetry]
name = "email-service"
version = "0.1.0"
description = "Email microservice"
authors = ["Mango Team"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.0"
djangorestframework = "^3.15.2"
drf-spectacular = "^0.27.2"
celery = "^5.4.0"
redis = "^5.2.1"
httpx = "^0.28.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
